# polygraph

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TestRunnerDockerfile  TestSchedulerDockerfile  config.json  entrypoint.sh  main.cpp  test-runner.sh  test_all.sh  test_runner.sh  test_scheduler.sh
.github/workflows/: main.yml
client/: CMakeLists.txt  config.json  main.cpp
client/graphs/: parallel.json  pipeline.json
client/src/: client.cpp  client.h  config.h  options.h  run.cpp  run.h  terminal.h
cmake/: googletest.cmake  rapidjson.cmake  uWebSockets.cmake
common/: CMakeLists.txt  bind.h  block.h  block_response.h  config.h  connection.h  constants.h  constraints.h  definitions.h  environment.h  error.h  input.h  json.cpp  json.h  json_helpers.cpp  json_helpers.h  logger.h  net.cpp  net.h  output.h  run_status.h  uuid.h
common/serialization/: all.h  bind.cpp  block_response.cpp  constraints.cpp  run_request.cpp  run_response.cpp  run_status.cpp  status.cpp  submit_response.cpp  workflow.cpp
common/structures/: all.h  bind.h  block_response.h  constraints.h  run_request.h  run_response.h  run_status.h  status.h  submit_response.h  workflow.h
config/: config.json  runner_conf.json
frontend/: CMakeLists.txt  main.cpp  options.h
frontend/src/: client.cpp  client.h  options.h  terminal.h
masternode/: CMakeLists.txt  config.json  main.cpp
masternode/config/: config.json  main.json  test.json
masternode/schema/: graph.json
masternode/src/: clients_group.h  config.cpp  config.h  constants.h  error.h  global.h  graph.cpp  graph.h  main.cpp  run.cpp  run.h  scheduler.cpp  scheduler.h  schema_validator.cpp  schema_validator.h  socket_group.cpp  socket_group.h  uuid.h
polygraph/: CMakeLists.txt  main.cpp
polygraph-client/: CMakeLists.txt  main.cpp
polygraph-client/src/: client.cpp  client.h  config.h
polygraph-runner/: CMakeLists.txt  main.cpp
polygraph-runner/src/: config.h  run.cpp  run.h
polygraph-scheduler/: CMakeLists.txt  main.cpp
polygraph-scheduler/src/: config.h  run.cpp  scheduler.cpp  scheduler.h
polygraph/src/: clean.cpp  clean.h  client.cpp  common.h  config_get.h  config_set.cpp  config_set_options.h  helpers.h  options.h  run.cpp  run_options.h  runner_start.cpp  runner_start.h  runner_start_options.h  runner_stop.cpp  runner_stop_options.h  start.cpp  start.h  start_options.h  stop.cpp  stop.h  stop_options.h
resources/: run_request_schema.json  run_response_schema.json  workflow_schema.json
runner/: CMakeLists.txt  config.json  main.cpp
runner/src/: config.h  options.h  run.cpp  run.h
scheduler/: CMakeLists.txt  config.json  main.cpp
scheduler/src/: config.cpp  config.h  graph.cpp  graph.h  options.h  run.cpp  scheduler.cpp  scheduler.h
schema/: graph.json  request.json  run_request.json  run_response.json  runner_request.json  runner_response.json  workflow.json
src/: clean.cpp  clean_options.h  client.cpp  client.h  config.h  config_get.cpp  config_get_options.h  config_set.h  definitions.h  error.h  helpers.h  json.h  meta.h  run.cpp  run.h  run_options.h  run_request.h  run_response.h  runner.cpp  runner.h  runner_start.cpp  runner_start_options.h  runner_stop.cpp  runner_stop.h  runner_stop_options.h  scheduler.cpp  scheduler_app.cpp  scheduler_app.h  serialize.h  start.cpp  start_options.h  stop.cpp  submit_response.h  uuid.h  workflow.h
structures/: CMakeLists.txt  bind.cpp  block_response.cpp  constraints.cpp  graph.cpp  graph.h  operations.h  result.cpp  result.h  run_request.cpp  run_request.h  run_response.cpp  run_response.h  serializable.h  status.cpp  status.h  structures.h  task.cpp  task.h  workflow.cpp
test/: CMakeLists.txt  Dockerfile  test_masternode.cpp  test_masternode.h
test/masternode/: CMakeLists.txt  helper.h  main.cpp  networking.h  test_masternode.cpp  user_graph.h
test/runner/: CMakeLists.txt  Dockerfile  check.h  config.h  entrypoint.sh  test.cpp  test.sh
test/scheduler/: CMakeLists.txt  Dockerfile  check.h  config.h  entrypoint.sh  execution.h  graph.h  main.cpp  networking.h  test.cpp  test.sh  test_graph.h  user_graph.h
tools/: CMakeLists.txt  constants.h  error.h  json.cpp  json.h  logger.h  serialize.h  uuid.h
worker/: CMakeLists.txt  main.cpp
workflows/matrices/: cmp.py  gen.cpp  gen.py  matrices.json  matrices_gencpp.json  mult.py  svd.py
workflows/optimization/: approx_log  differentiate.py  init.py  optimization.json  solution  subtract.py
workflows/test/: test.json
